--- a/product.html
+++ b/product.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-
+    <main>
+        <div class="card"></div>
+        <div class="card soldout"></div>
+        <div class="card discount"></div>
+        <div class="card soldout discount"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
