cards starts to work

--- a/list.html
+++ b/list.html
@@ -9,8 +9,55 @@
     <title>Document</title>
 </head>
 
-<body>
-
+<body class="productlist">
+    <main>
+        <h2>Accessories</h2>
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
+            <h3>Deck Navy Blue Backpack</h3>
+            <p class="subtle">Backpacks | Puma</p>
+            <p class="price"><span>Prev.</span> DKK 1299,-</p>
+            <div class="discounted">
+                <p>Now DKK 585,-</p>
+                <p>-55%</p>
+            </div>
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct soldout"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="">
+            <h3>Big Cat Backpack Black</h3>
+            <p class="subtle">Backpacks | Puma</p>
+            <p class="price"><span>Prev.</span> DKK 1595,-</p>
+            <!-- <div class="discounted">
+          <p>Now DKK 1299,-</p>
+          <p>-55%</p> -->
+            </div>
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct discount"><img src="https://kea-alt-del.dk/t7/images/webp/640/1532.webp" alt="">
+            <h3>Grey Solid Round Neck T-Shirt</h3>
+            <p></p>
+            <p></p>
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct soldout discount"><img src="https://kea-alt-del.dk/t7/images/webp/640/1531.webp"
+                alt="">
+            <h3>Grey Leaping Cat T-shirt</h3>
+            <p></p>
+            <p></p>
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1541.webp" alt="">
+            <h3>Ballistic Rubber Shoe</h3>
+            <p></p>
+            <p></p>
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1551.webp" alt="">
+            <h3>Power Cat Trainer-OB Football</h3>
+            <p></p>
+            <p></p>
+            <a href="product.html">To Product</a>
+        </article>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
