produkliste er fin

--- a/list.html
+++ b/list.html
@@ -22,39 +22,66 @@
             </div>
             <a href="product.html">To Product</a>
         </article>
-        <article class="smallProduct soldout"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="">
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="">
             <h3>Big Cat Backpack Black</h3>
             <p class="subtle">Backpacks | Puma</p>
-            <p class="price"><span>Prev.</span> DKK 1595,-</p>
+            <p class="price">
+                <!-- <span>Prev.</span>  -->
+                DKK 1595,-
+            </p>
             <!-- <div class="discounted">
           <p>Now DKK 1299,-</p>
           <p>-55%</p> -->
             </div>
             <a href="product.html">To Product</a>
         </article>
-        <article class="smallProduct discount"><img src="https://kea-alt-del.dk/t7/images/webp/640/1532.webp" alt="">
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1531.webp" alt="">
             <h3>Grey Solid Round Neck T-Shirt</h3>
-            <p></p>
-            <p></p>
+            <p class="subtle">Tshirts | Puma</p>
+            <p class="price">
+                <!-- <span>Prev.</span>  -->
+                DKK 799,-
+            </p>
+            <!-- <div class="discounted">
+                <p>Now DKK 585,-</p>
+                <p>-55%</p>
+            </div> -->
             <a href="product.html">To Product</a>
         </article>
-        <article class="smallProduct soldout discount"><img src="https://kea-alt-del.dk/t7/images/webp/640/1531.webp"
-                alt="">
-            <h3>Grey Leaping Cat T-shirt</h3>
-            <p></p>
-            <p></p>
-            <a href="product.html">To Product</a>
-        </article>
-        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1541.webp" alt="">
+        <article class="smallProduct soldOut"><img src="https://kea-alt-del.dk/t7/images/webp/640/1542.webp" alt="">
             <h3>Ballistic Rubber Shoe</h3>
-            <p></p>
-            <p></p>
+            <p class="subtle">Backpacks | Puma</p>
+            <p class="price">
+                <span>Prev.</span>
+                DKK 3499,-
+            </p>
+            <div class="discounted">
+                <p>Now DKK 2414,-</p>
+                <p>-31%</p>
+            </div>
             <a href="product.html">To Product</a>
         </article>
-        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1551.webp" alt="">
-            <h3>Power Cat Trainer-OB Football</h3>
-            <p></p>
-            <p></p>
+        <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1532.webp" alt="">
+            <h3>Grey Leaping Cat T-shirt</h3>
+            <p class="subtle">Backpacks | Puma</p>
+            <p class="price"><span>Prev.</span> DKK 899,-</p>
+            <!-- <div class="discounted">
+                <p>Now DKK 585,-</p>
+                <p>-55%</p>
+            </div> -->
+            <a href="product.html">To Product</a>
+        </article>
+        <article class="smallProduct soldOut"><img src="https://kea-alt-del.dk/t7/images/webp/640/1554.webp" alt="">
+            <h3>Blue Sipper</h3>
+            <p class="subtle">Water Bottle | Quechua</p>
+            <p class="price">
+                <!-- <span>Prev.</span>  -->
+                DKK 249,-
+            </p>
+            <!-- <div class="discounted">
+                <p>Now DKK 585,-</p>
+                <p>-55%</p>
+            </div> -->
             <a href="product.html">To Product</a>
         </article>
     </main>
