update local links

--- a/categories.html
+++ b/categories.html
@@ -16,12 +16,12 @@
         <h1>Trend44K</h1>
         <h2>Categories</h2>
         <section class="grid_1-1-1 categorylist">
-            <a href="productlist.html" class="cat_box">Apparel</a>
-            <a href="productlist.html" class="cat_box">Footwear</a>
-            <a href="productlist.html" class="cat_box">Accessories</a>
-            <a href="productlist.html" class="cat_box">Sporting Goods</a>
-            <a href="productlist.html" class="cat_box">Personal Care</a>
-            <a href="productlist.html" class="cat_box">Free Items</a>
+            <a href="list.html" class="cat_box">Apparel</a>
+            <a href="list.html" class="cat_box">Footwear</a>
+            <a href="list.html" class="cat_box">Accessories</a>
+            <a href="list.html" class="cat_box">Sporting Goods</a>
+            <a href="list.html" class="cat_box">Personal Care</a>
+            <a href="list.html" class="cat_box">Free Items</a>
         </section>
     </main>
     <script src="js/main.js"></script>
