--- a/categories.html
+++ b/categories.html
@@ -9,9 +9,18 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="category">
 
-    <header></header>
+    <header>
+        <img src="/assets/logo.png" alt="">
+        <nav>
+            <ul>
+                <li><a href="categories.html">Categories</a></li>
+                <li><a href="brands.html">Brands</a></li>
+                <li><a href="Seasons.html">Seasons</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>Trend44K</h1>
         <h2>Categories</h2>
