klar til produktside

--- a/list.html
+++ b/list.html
@@ -6,10 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Products</title>
 </head>
 
 <body class="productlist">
+    <header>
+        <img src="/assets/logo.png" alt="">
+        <nav>
+            <ul>
+                <li><a href="categories.html">Categories</a></li>
+                <li><a href="brands.html">Brands</a></li>
+                <li><a href="Seasons.html">Seasons</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h2>Accessories</h2>
         <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
