--- a/product.html
+++ b/product.html
@@ -9,8 +9,18 @@
     <title>Document</title>
 </head>
 
-<body>
-
+<body class="">
+    <header>
+        <img src="/assets/logo.png" alt="">
+        <nav>
+            <ul>
+                <li><a href="categories.html">Categories</a></li>
+                <li><a href="brands.html">Brands</a></li>
+                <li><a href="Seasons.html">Seasons</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
     <script src="js/main.js"></script>
 </body>
 
