--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body class="">
+<body class="one_product">
     <header>
         <img src="/assets/logo.png" alt="">
         <nav>
@@ -20,7 +20,45 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <ol class="breadcrumbs">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="categories.html">Categories</a></li>
+            <li><a href="accessories.html">Accessories</a></li>
+            <li>Deck Navy Blue Backpack</li>
+        </ol>
+        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="">
+        <section class="purchaseBox">
+            <div>
+                <h3>Deck Navy Blue Backpack</h3>
+                <p>Puma | Tshirts</p>
+            </div>
+            <form>
+                <label>Choose a size
+                    <select name="size">
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                    </select>
+                </label>
+                <button>Add to basket</button>
+            </form>
+        </section>
+        <section class="info">
+            <h2>Product Information</h2>
+            <dl>
+                <dt>Model name</dt>
+                <dd>Deck Navy Blue Backpack</dd>
+                <dt>Brand</dt>
+                <dd>Puma</dd>
+                <dt>Inventory number</dt>
+                <dd>1525</dd>
+                <dt></dt>
+                <dd></dd>
+            </dl>
+        </section>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
