product is dynamic

--- a/product.html
+++ b/product.html
@@ -27,11 +27,11 @@
             <li><a href="accessories.html">Accessories</a></li>
             <li>Deck Navy Blue Backpack</li>
         </ol>
-        <img src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="">
+        <img class="product_img" src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="">
         <section class="purchaseBox">
             <div>
                 <h3>Deck Navy Blue Backpack</h3>
-                <p>Puma | Tshirts</p>
+                <p><span class="brand">Puma</span> | <span class="type">Tshirts</span></p>
             </div>
             <form>
                 <label>Choose a size
@@ -51,7 +51,7 @@
                 <dt>Model name</dt>
                 <dd>Deck Navy Blue Backpack</dd>
                 <dt>Brand</dt>
-                <dd>Puma</dd>
+                <dd>skift det ud</dd>
                 <dt>Inventory number</dt>
                 <dd>1525</dd>
                 <dt></dt>
@@ -59,7 +59,7 @@
             </dl>
         </section>
     </main>
-    <script src="js/main.js"></script>
+    <script src="js/product.js"></script>
 </body>
 
 </html>
