links med url-parametre virker

--- a/list.html
+++ b/list.html
@@ -32,7 +32,7 @@
                     <p><span>Now DKK </span><span>585,-</span></p>
                     <p>-55%</p>
                 </div>
-                <a href="product.html">See Product</a>
+                <a class="see_product" href="product.html">See Product</a>
             </article>
         </template>
         <!-- <article class="smallProduct"><img src="https://kea-alt-del.dk/t7/images/webp/640/1526.webp" alt="">
