cat.js tilføjes

--- a/categories.html
+++ b/categories.html
@@ -33,7 +33,7 @@
             <a href="list.html" class="cat_box">Free Items</a>
         </section>
     </main>
-    <script src="js/main.js"></script>
+    <script src="js/categories.js"></script>
 </body>
 
 </html>
