--- a/categories.html
+++ b/categories.html
@@ -25,15 +25,16 @@
         <h1>Trend44K</h1>
         <h2>Categories</h2>
         <section class="grid_1-1-1 categorylist">
-            <a href="list.html" class="cat_box">Apparel</a>
-            <a href="list.html" class="cat_box">Footwear</a>
-            <a href="list.html" class="cat_box">Accessories</a>
-            <a href="list.html" class="cat_box">Sporting Goods</a>
-            <a href="list.html" class="cat_box">Personal Care</a>
-            <a href="list.html" class="cat_box">Free Items</a>
+            <template><a href="list.html" class="cat_box">Apparel</a></template>
         </section>
     </main>
     <script src="js/categories.js"></script>
 </body>
 
 </html>
+
+<!-- <a href="list.html" class="cat_box cat_footwear">Footwear</a>
+<a href="list.html" class="cat_box cat_accessories">Accessories</a>
+<a href="list.html" class="cat_box cat_sporting">Sporting Goods</a>
+<a href="list.html" class="cat_box cat_personal">Personal Care</a>
+<a href="list.html" class="cat_box cat_free">Free Items</a> -->
