--- a/list.html
+++ b/list.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h2>Accessories</h2>
+        <h2>Accessories men fix den her</h2>
         <template id="smallProductTemplate">
             <article class="smallProduct">
                 <img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="">
